Argh stupid image margin alignment fix

--- a/res/style.css
+++ b/res/style.css
@@ -400,7 +400,7 @@ body {
 }
 
 .home .copyright {
-  margin-left: 10px;
+  margin-left: 9px;
   margin-top: 0px;
   padding-top: 20px;
   width: 980px;
